# PP1

./: .flake8  .gitignore  README.md  pyproject.toml
pack/: file1.py  file2.py  tests.py
src/: masks.py  processing.py  widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
