[project]
name = "pp1"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Lebedev",email = "lvv1985@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]
packages = [
    { include = "src" },  # Замените "pp1" на имя вашего пакета/директории с кодом
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pytest = "^8.3.5"
pytest-cov = "^4.1.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
mypy = "^1.5.0"
black = "^23.7.0"
isort = "^5.12.0"

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = ["venv"]  # Правильный формат для исключений